# web5-indexer

./: Cargo.toml  README.md
migrations/2025-09-03-070453_init/: up.sql
src/: ckb.rs  db.rs  error.rs  main.rs  models.rs  router.rs  schema.rs  util.rs
