[package]
name = "web5-indexer"
version = "0.1.5"
authors = ["Yieazy <yuitta@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
diesel = { version = "2.0", features = ["chrono", "postgres", "r2d2"] }
hex = "0.4.3"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3.0"
derive_more = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenvy = "0.15"
serde_ipld_dagcbor = { version = "0.6.1", features = ["codec"] }
chrono = "0.4"
data-encoding = "2.0"

ckb-sdk = "4.1.0"
ckb-types = "0.202"
ckb-jsonrpc-types = "0.202"
molecule = { version = "0.9.1", default-features = false }

actix-web = "4.11"
actix-cors = "0.7"
actix-files = "0.6"
